--- a/outline/footer.html
+++ b/outline/footer.html
@@ -1,15 +1,18 @@
 <footer id="footer" class="container">
   <div class="inner">
-    <div class="footer__logo">PRADA</div>
-    <p class="footer-information1">
-      <a href="#">
-        회사명: 프라다 코리아 (유). 사엄자 등록번호: 213-86-18599.
-        대표자: 최문영. 개인정보 보호책임자: 김지훈이사.
-        통신판매신고번호: 2017-서울강남-04082.
-    </p>
-    </a>
-    </p>
+    <div class="footer__logo">
+      PRADA
+    </div>
+    <div class="footer_info1">
+      <p>회사명: 프라다 코리아 (유).</p>
+      <p>사업자 등록번호: 213-86-18599.</p>
+      <p>대표자: 최문영. 개인정보 보호책임자: 김지훈이사.</p>
+      <p>통신판매신고번호: 2017-서울강남-04082.</p>
+      <p>고객 서비스 센터: 080-522-7199.</p>
+    </div>
+    <address class="footer_adr">
+      주소: 서울시 강남구 압구정로 439 06010.
+    </address>
     <a href="mailto:kimeumin98@naver.com">kimeumin98@naver.com</a>
     <div class="copyright">&#169;copyright 2023 HYUN</div>
   </div>
-</footer>
