--- a/outline/footer.html
+++ b/outline/footer.html
@@ -1,8 +1,17 @@
 <footer id="footer" class="container">
   <div class="inner">
-    <div class="footer__logo">
-      PRADA
+    <div class="footer_logo">
+      <strong>PRADA</strong>
     </div>
+    <br>
+    <div class="info_policy">
+      <a href="#" class="link_policy">고객센터</a>
+      <a href="#" class="link_policy">이용약관</a>
+      <a href="#" class="link_policy">개인정보처리방침</a>
+      <a href="#" class="link_policy">이용안내</a>
+    </div>
+    <br>
+    <div class="copyright">&#169;PRADA 2007 - 2023</div>
     <div class="footer_info1">
       <p>회사명: 프라다 코리아 (유).</p>
       <p>사업자 등록번호: 213-86-18599.</p>
@@ -12,7 +21,10 @@
     </div>
     <address class="footer_adr">
       주소: 서울시 강남구 압구정로 439 06010.
+      <p>이메일:
+        <a href="mailto:kimeumin98@naver.com" class="footer_mail">kimeumin98@naver.com</a>
+      </p>
     </address>
-    <a href="mailto:kimeumin98@naver.com">kimeumin98@naver.com</a>
-    <div class="copyright">&#169;copyright 2023 HYUN</div>
+    <p class="footer_info">모든제품은 2016년 1월 이후에 생산된 제품입니다.</p>
+
   </div>
