--- a/outline/header.html
+++ b/outline/header.html
@@ -1,7 +1,9 @@
 <header id="header" class="container">
   <div class="inner">
-    <h1 id="logo">
-      <a href="#">PRADA</a>
+    <h1 class="logo">
+      <a href="#">
+        <img src="/images/comm/prada logo.svg" alt="PRADA">
+      </a>
     </h1>
     <div class="header__right">
       <div class="util">
@@ -12,6 +14,11 @@
             <button class="btn-g btn-search">
               <span class="material-icons-outlined"> search </span>
               <span class="blind">검색</span>
+            </button>
+            <button class="btn-g btn-cart">
+              <span class="material-icons-outlined">
+                shopping_bag
+              </span>
             </button>
           </li>
         </ul>
