--- a/outline/header.html
+++ b/outline/header.html
@@ -2,7 +2,7 @@
   <div class="inner">
     <h1 class="logo">
       <a href="#">
-        <img src="/images/comm/prada logo.svg" alt="PRADA">
+        <img src="/images/comm/PRADA.svg" alt="PRADA">
       </a>
     </h1>
     <div class="header__right">
