--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
                     alt="woman fashion">
                   <div class="img-tit1">WOMAN WEARS</div>
                   <div class="img-txt-box">
-                    <strong> Woman COLLECTION</strong>
+                    <strong class="mini-tit"> Woman COLLECTION</strong>
                     <p>
-                      <span>프라다만의 여자 옷들을 만나보세요.</span>
+                      <span class="img-exp">프라다만의 여자 옷들을 만나보세요.</span>
                     </p>
+                    <button type="button" class="btn-more">더 알아보기</button>
+                    <button type="button" class="btn-pur">구매하기</button>
                   </div>
                 </a>
               </li>
@@ -78,10 +80,12 @@
                 </a>
                 <div class="img-tit2">MAN WEARS</div>
                 <div class="img-txt-box">
-                  <strong> Man COLLECTION</strong>
+                  <strong class="mini-tit"> Man COLLECTION</strong>
                   <p>
-                    <span>프라다만의 남자 옷들을 만나보세요.</span>
+                    <span class="img-exp">프라다만의 남자 옷들을 만나보세요.</span>
                   </p>
+                  <button type="button" class="btn-more">더 알아보기</button>
+                  <button type="button" class="btn-pur">구매하기</button>
                 </div>
               </li>
               <li>
@@ -90,10 +94,12 @@
                 </a>
                 <div class="img-tit3">SHOES <br> COLLECTION</div>
                 <div class="img-txt-box">
-                  <strong> Shoes COLLECTION </strong>
+                  <strong class="mini-tit"> Shoes COLLECTION </strong>
                   <p>
-                    <span>프라다만의 신발을 만나보세요.</span>
+                    <span class="img-exp">프라다만의 신발을 만나보세요.</span>
                   </p>
+                  <button type="button" class="btn-more">더 알아보기</button>
+                  <button type="button" class="btn-pur">구매하기</button>
                 </div>
               </li>
             </ul>
