--- a/outline/header.html
+++ b/outline/header.html
@@ -2,7 +2,7 @@
   <div class="inner">
     <h1 class="logo">
       <a href="#">
-        <img src="/images/comm/PRADA.svg" alt="PRADA">
+        <img src="/images/comm/PRADA.svg" alt="PRADA" />
       </a>
     </h1>
     <div class="header__right">
@@ -16,9 +16,7 @@
               <span class="blind">검색</span>
             </button>
             <button class="btn-g btn-cart">
-              <span class="material-icons-outlined">
-                shopping_bag
-              </span>
+              <span class="material-icons-outlined"> shopping_bag </span>
             </button>
           </li>
         </ul>
