--- a/outline/header.html
+++ b/outline/header.html
@@ -22,14 +22,34 @@
         </ul>
       </div>
       <nav class="gnb-wrap">
-        <input type="checkbox" name="gnbNav" id="gnbNav" class="input-burger" />
+        <input type="checkbox" name="gnbNav" id="gnbNav" class="input-burger" checked />
         <label for="gnbNav" class="label-burger">
           <span class="blind">전체 메뉴 보기</span>
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
         </label>
-        <div id="gnb">navi</div>
+        <div id="gnb">
+          <label for="nav">
+            <a href="">
+              <img src="/images/comm/PRADA.svg" alt="logo nav menu">
+            </a>
+          </label>
+          <ul class="lst-menu">
+            <li>
+              <a href="#">MAN</a>
+            </li>
+            <li>
+              <a href="#">WOMAN</a>
+            </li>
+            <li>
+              <a href="#">SHOE</a>
+            </li>
+            <li>
+              <a href="#">BAG</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </div>
   </div>
