--- a/outline/header.html
+++ b/outline/header.html
@@ -22,7 +22,7 @@
         </ul>
       </div>
       <nav class="gnb-wrap">
-        <input type="checkbox" name="gnbNav" id="gnbNav" class="input-burger" checked />
+        <input type="checkbox" name="gnbNav" id="gnbNav" class="input-burger" />
         <label for="gnbNav" class="label-burger">
           <span class="blind">전체 메뉴 보기</span>
           <span class="bar"></span>
@@ -32,20 +32,22 @@
         <div id="gnb">
           <label for="nav">
             <a href="">
-              <img src="/images/comm/PRADA.svg" alt="logo nav menu">
+              <img src="/images/comm/PRADA.svg" alt="logo nav menu" />
             </a>
           </label>
-          <ul class="lst-menu">
-            <li>
+
+          <ul class="lst-categ">
+            <li class="categ-item">
               <a href="#">MAN</a>
+              <button type="button" class=""></button>
             </li>
-            <li>
+            <li class="categ-item">
               <a href="#">WOMAN</a>
             </li>
-            <li>
+            <li class="categ-item">
               <a href="#">SHOE</a>
             </li>
-            <li>
+            <li class="categ-item">
               <a href="#">BAG</a>
             </li>
           </ul>
