--- a/outline/header.html
+++ b/outline/header.html
@@ -30,16 +30,12 @@
           <span class="bar"></span>
         </label>
         <div id="gnb">
-          <label for="nav">
-            <a href="">
-              <img src="/images/comm/PRADA.svg" alt="logo nav menu" />
-            </a>
-          </label>
-
+          <a href="">
+            <img src="/images/comm/SVG/prada white.svg" alt="PRADA" class="img-logo" />
+          </a>
           <ul class="lst-categ">
             <li class="categ-item">
               <a href="#">MAN</a>
-              <button type="button" class=""></button>
             </li>
             <li class="categ-item">
               <a href="#">WOMAN</a>
