--- a/goods-list.html
+++ b/goods-list.html
@@ -1,436 +1,101 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
-    />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>프로젝트 이름 반응형 코딩리스트</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <style>
-      .wrap {
-        max-width: 1280px;
-        margin: auto;
-        padding: 20px 0;
-      }
-      .header {
-        overflow: hidden;
-      }
-      h1 {
-        margin: 0 8px 0 0;
-        float: left;
-      }
-      .count {
-        display: table;
-        width: 300px;
-        margin: 10px 0 8px 0;
-        line-height: 1;
-      }
-      .count dt {
-        display: table-cell;
-        padding: 0 4px;
-        line-height: inherit;
-        white-space: nowrap;
-        text-align: right;
-        vertical-align: middle;
-      }
-      .count dd {
-        display: table-cell;
-        padding: 0 4px 0 0;
-        font-size: 20px;
-        font-weight: bold;
-        line-height: inherit;
-        vertical-align: middle;
-      }
-      .progress {
-        width: 120px;
-      }
 
-      .download {
-        margin: 0 0 14px;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PRADA</title>
+  <meta name="description" content="네이버 메인에서 다양한 정보와 유용한 컨텐츠를 만나 보세요" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="페이지 제목" />
+  <meta property="og:description" content="페이지 설명" />
+  <meta property="og:image" content="http://www.mysite.com/article/article1_featured_image.jpg" />
+  <meta property="og:url" content="http://www.mysite.com/article/article1.html" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="페이지 제목" />
+  <meta name="twitter:description" content="페이지 설명" />
+  <meta name="twitter:image" content="http://www.mysite.com/article/article1.html" />
+  <meta name="twitter:domain" content="사이트 명" />
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Staatliches&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Round"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+  <link rel="stylesheet"
+    href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+  <link rel="stylesheet" href="./dist/css/comm.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+  <script defer src="./dist/js/include.js"></script>
+  <script defer src="./dist/js/comm.js"></script>
+</head>
 
-      .nav-item {
-        font-size: 12px;
-      }
+<body>
+  <div id="u-skip">
+    <a href="#gnb"><span>주요메뉴 바로가기</span></a>
+    <a href="#main"><span>컨텐츠 바로가기</span></a>
+    <a href="#footer"><span>풋터 바로가기</span></a>
+  </div>
+  <div class="wrap">
+    <!-- logo 왼쪽 type -->
+    <header data-include-path="./outline/header.html"></header>
+    <main id="main">
+      <div class="lst-contents">
+        <div class="lst-tit">
+          <a href="#">MAN</a>
+          <h3>TOP</h3>
+        </div>
+        <div class="slide-wrap">
+          전
 
-      .tab-content {
-        padding: 1em 0;
-      }
-      .table {
-        border: 1px solid #ddd;
-        table-layout: fixed;
-      }
-      .table th,
-      .table td {
-        padding: 5px 8px 6px;
-        font-family: sans-serif;
-        word-wrap: break-word;
-        word-break: break-all;
-        border: 1px solid #ddd;
-      }
-
-      .table thead th {
-        padding-top: 4px;
-        padding-bottom: 4px;
-        border-width: 0;
-        text-align: center;
-      }
-
-      .table th {
-        color: #fff;
-        background: #17a2b8;
-      }
-
-      .table tbody {
-        counter-reset: count;
-      }
-
-      .table tbody td:not([class^="category"]):first-child {
-        counter-increment: count;
-      }
-
-      .table td:not([class^="category"]):first-child:before {
-        content: counter(count);
-      }
-
-      .table td:nth-child(2),
-      .table td:nth-child(3),
-      .table td:nth-child(4),
-      .table td:nth-child(5) {
-        text-align: left;
-      }
-
-      .table tr .category {
-        padding: 6px 12px;
-        font-weight: bold;
-        color: #17a2b8;
-        text-align: left;
-        border-top: 2px solid #17a2b8;
-        background: #f7f7f7;
-      }
-      .table-hover tbody tr:hover {
-        background: #f4f4f4;
-      }
-      .table tr:hover .table-success {
-        background: #b1dfbb;
-      }
-      .table tr:hover .table-info {
-        background: #abdde5;
-      }
-      .table tr:hover .table-warning {
-        background: #ffe8a1;
-      }
-
-      @media (max-width: 769px) {
-        .h2 {
-          font-size: 1.5em;
-        }
-        .count dd {
-          font-size: 1em;
-        }
-
-        .table {
-          display: block;
-          overflow: hidden;
-        }
-
-        .table thead {
-          display: none;
-        }
-
-        .table tbody,
-        .table tr {
-          display: flex;
-          flex-direction: column;
-          width: 100%;
-          overflow: hidden;
-          border-bottom: 1px solid #ddd;
-        }
-
-        .table td {
-          width: 100%;
-          padding: 0 20px;
-          word-break: keep-all;
-          border-width: 0;
-          float: left;
-        }
-
-        .table td:first-child {
-          display: none;
-        }
-
-        .table td:nth-child(6),
-        .table td:nth-child(7),
-        .table td:nth-child(8),
-        .table td:nth-child(9) {
-          display: none;
-        }
-
-        .table td.category {
-          display: block;
-          width: 100%;
-          border-width: 1px 0;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div class="wrap">
-      <div class="header">
-        <h1 class="h2">프로젝트 반응형 코딩리스트</h1>
-        <dl class="count">
-          <dt>
-            <span class="badge badge-dark">총 페이지수</span>
-          </dt>
-          <dd id="totalPage">0</dd>
-          <dt>
-            <span class="badge badge-danger">완료</span>
-          </dt>
-          <dd id="completed" class="text-danger">0</dd>
-          <dt>
-            <span class="badge badge-danger">진행률</span>
-          </dt>
-          <dd>
-            <div class="progress">
-              <div
-                class="progress-bar bg-danger"
-                role="progressbar"
-                style="width: 0"
-                aria-valuenow="0"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              >
-                0%
-              </div>
-            </div>
-          </dd>
-        </dl>
-      </div>
-
-      <!-- <a href="#" class="btn btn-outline-dark btn-sm download">Git 바로가기</a>
-        <a href="#" class="btn btn-outline-dark btn-sm download">파일 다운로드(Git)</a> -->
-
-      <div class="content">
-        <ul class="nav nav-tabs" id="myTab" role="tablist">
-          <li class="nav-item">
-            <a
-              class="nav-link active"
-              id="tab1-tab"
-              data-toggle="tab"
-              href="#tab1"
-              role="tab"
-              aria-controls="tab1"
-              aria-selected="true"
-              >웹/모바일</a
-            >
-          </li>
-        </ul>
-
-        <div class="tab-content" id="myTabContent">
-          <div
-            class="tab-pane fade show active"
-            id="tab1"
-            role="tabpanel"
-            aria-labelledby="tab1"
-          >
-            <table class="table table-hover">
-              <colgroup>
-                <col style="width: 3%" />
-                <col />
-                <col />
-                <col style="width: 20%" />
-                <col style="width: 20%" />
-                <col style="width: 20%" />
-                <col style="width: 10%" />
-                <col style="width: 5%" />
-              </colgroup>
-              <thead>
-                <tr>
-                  <th>No</th>
-                  <th>1depth</th>
-                  <th>2depth</th>
-                  <th>3depth</th>
-                  <th>파일명</th>
-                  <th>비고</th>
-                  <th>Last update</th>
-                  <th>Status</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td class="category" colspan="8">프로젝트</td>
-                </tr>
-
-                <tr>
-                  <td></td>
-                  <td>main</td>
-                  <td></td>
-                  <td></td>
-                  <td>index.html</td>
-                  <td>gnb, nav, footer 추가</td>
-                  <td>2023-01-06</td>
-                  <td>완료</td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td>goods</td>
-                  <td>카테고리</td>
-                  <td>goods_category.html</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td>리스트</td>
-                  <td>goods_list.html</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td>상세</td>
-                  <td>goods_view.html</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td>order</td>
-                  <td>장바구니</td>
-                  <td>cart.html</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td>주문서 작성 / 결제</td>
-                  <td>order.html</td>
-                  <td>modal 포함</td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td>mypage</td>
-                  <td></td>
-                  <td>index.html</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td>내 정보 수정</td>
-                  <td>my_page.html</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td>상품문의</td>
-                  <td>mypage_goods_qa.html</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td>상품후기</td>
-                  <td>mypage_goods_review.html</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+          <!-- <ul class="slide-sub-menu">
+            <li>
+              <a href="#">
+                전체보기
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                맨투맨
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                후드티
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                니트
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                긴팔티
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                반팔티
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                나시
+              </a>
+            </li>
+          </ul> -->
         </div>
       </div>
-
-      <div class="footer"></div>
+    </main>
+    <div class="section-contents">
+      <footer data-include-path="./outline/footer.html"></footer>
     </div>
+</body>
 
-    <script>
-      $(function () {
-        var total = 0,
-          completed = 0,
-          progress = 0;
-
-        $(".table td")
-          .filter(":first-child")
-          .not(".category")
-          .each(function (idx) {
-            total += 1;
-          });
-
-        $("table td")
-          .not(".category")
-          .each(function () {
-            var $this = $(this);
-
-            if ($this.text().indexOf(".html") > -1) {
-              $this.html(
-                '<a href="' +
-                  $this.text() +
-                  '" target="_blank">' +
-                  $this.text().replace(/^.*\//g, "").replace(".html", "") +
-                  "</a>"
-              );
-            }
-
-            if ($this.text().match(/^완료$/)) {
-              $this.addClass("table-success");
-              completed += 1;
-            } else if ($this.text().match(/^수정$/)) {
-              $this.addClass("table-info");
-              completed += 1;
-            } else if ($this.text().match(/^작업$/)) {
-              $this.addClass("table-warning");
-            }
-          });
-
-        progress = Math.ceil((completed / total) * 100);
-
-        $("#totalPage").text(total);
-        $("#completed").text(completed);
-        $(".progress-bar")
-          .css("width", progress + "%")
-          .attr("area-valuenow", progress)
-          .text(progress + "%");
-      });
-    </script>
-  </body>
 </html>
