--- a/goods-list.html
+++ b/goods-list.html
@@ -51,7 +51,7 @@
           <h3>TOP</h3>
         </div>
         <div class="slide-wrap">
-          전
+          전체보기
 
           <!-- <ul class="slide-sub-menu">
             <li>
