--- a/goods-list.html
+++ b/goods-list.html
@@ -47,8 +47,7 @@
     <main id="main">
       <div class="lst-contents">
         <div class="lst-tit">
-          <a href="#">MAN</a>
-          <h3>TOP</h3>
+          <a href="#">MAN'S</a>
         </div>
         <div class="slide-wrap">
           전체보기
@@ -61,36 +60,161 @@
             </li>
             <li>
               <a href="#">
-                맨투맨
+                재킷 및 코트
               </a>
             </li>
             <li>
               <a href="#">
-                후드티
+                셔츠
               </a>
             </li>
             <li>
               <a href="#">
-                니트
+                데님
               </a>
             </li>
             <li>
               <a href="#">
-                긴팔티
+              아우터
               </a>
             </li>
             <li>
               <a href="#">
-                반팔티
+               니트웨어
               </a>
             </li>
             <li>
               <a href="#">
-                나시
+                티시츠 및 폴로셔츠
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                가죽의류 
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                팬츠 및 버뮤다 
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                조깅복 및 스웨트 셔츠
               </a>
             </li>
           </ul> -->
         </div>
+        <section class="container section-g section-shopping">
+          <div class="inner">
+            <h2 class="section-tit blind"></h2>
+            <div class="section-contents">
+              <ul class="lst-shopping">
+                <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
+                </li>
+                <li class="img-bigsize">
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"></a>
+                </li>
+                <li>
+                  <a href="#"></a>
+                </li>
+                <li>
+                  <a href="#"></a>
+                </li>
+                <li>
+                  <a href="#"></a>
+                </li>
+                <li>
+                  <a href="#"></a>
+                </li>
+                <li>
+                  <a href="#"></a>
+                </li>
+                <li>
+                  <a href="#"></a>
+                </li>
+                <li>
+                  <a href="#"></a>
+                </li>
+                <li>
+                  <a href="#"></a>
+                </li>
+                <li>
+                  <a href="#"></a>
+                </li>
+                <li>
+                  <a href="#"></a>
+                </li>
+                <li>
+                  <a href="#"></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
       </div>
     </main>
     <div class="section-contents">
