--- a/outline/header.html
+++ b/outline/header.html
@@ -47,6 +47,14 @@
               <a href="#">BAG</a>
             </li>
           </ul>
+          <ul class="lst-categ2">
+            <li class="categ-item2">
+              <a href="#" class="menu-wish">위시리스트</a>
+            </li>
+            <li>
+              <a href="#" class="menu-phone">문의하기</a>
+            </li>
+          </ul>
         </div>
       </nav>
     </div>
