--- a/goods-list.html
+++ b/goods-list.html
@@ -50,17 +50,15 @@
           <a href="#">MAN'S</a>
         </div>
         <div class="slide-wrap">
-          전체보기
-
-          <!-- <ul class="slide-sub-menu">
-            <li>
+           <ul class="slide-sub-menu">
+            <li class="lst-all">
               <a href="#">
                 전체보기
               </a>
             </li>
             <li>
               <a href="#">
-                재킷 및 코트
+                재킷/코트
               </a>
             </li>
             <li>
@@ -85,7 +83,7 @@
             </li>
             <li>
               <a href="#">
-                티시츠 및 폴로셔츠
+                티셔츠/폴로셔츠
               </a>
             </li>
             <li>
@@ -95,15 +93,15 @@
             </li>
             <li>
               <a href="#">
-                팬츠 및 버뮤다 
+                팬츠/버뮤다 
               </a>
             </li>
             <li>
               <a href="#">
-                조깅복 및 스웨트 셔츠
+                조깅복/스웨트 셔츠
               </a>
             </li>
-          </ul> -->
+          </ul> 
         </div>
         <section class="container section-g section-shopping">
           <div class="inner">
@@ -175,41 +173,200 @@
                     </div>
                   </a>
                 </li>
-                <li>
-                  <a href="#"></a>
+                 <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
+                </li>
+                 <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
+                </li>
+                 <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
+                </li>
+                 <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
+                </li>
+                 <li class="img-bigsize">
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
+                </li>
+                 <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
+                </li>
+                 <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
+                </li>
+                 <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
+                </li>
+                 <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
+                </li>
+                <li class="img-bigsize">
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
                 </li>
                 <li>
-                  <a href="#"></a>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
                 </li>
                 <li>
-                  <a href="#"></a>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
                 </li>
-                <li>
-                  <a href="#"></a>
+                 <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
                 </li>
-                <li>
-                  <a href="#"></a>
+                 <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
                 </li>
-                <li>
-                  <a href="#"></a>
-                </li>
-                <li>
-                  <a href="#"></a>
-                </li>
-                <li>
-                  <a href="#"></a>
-                </li>
-                <li>
-                  <a href="#"></a>
-                </li>
-                <li>
-                  <a href="#"></a>
-                </li>
-                <li>
-                  <a href="#"></a>
-                </li>
-                <li>
-                  <a href="#"></a>
+                <li class="img-bigsize">
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
                 </li>
               </ul>
             </div>
