--- a/goods-list.html
+++ b/goods-list.html
@@ -50,9 +50,9 @@
           <a href="#">MAN'S</a>
         </div>
         <div class="slide-wrap">
-           <ul class="slide-sub-menu">
-            <li class="lst-all">
-              <a href="#">
+          <ul class="slide-sub-menu">
+            <li>
+              <a href="#" class="lst-all">
                 전체보기
               </a>
             </li>
@@ -73,12 +73,12 @@
             </li>
             <li>
               <a href="#">
-              아우터
+                아우터
               </a>
             </li>
             <li>
               <a href="#">
-               니트웨어
+                니트웨어
               </a>
             </li>
             <li>
@@ -88,12 +88,12 @@
             </li>
             <li>
               <a href="#">
-                가죽의류 
+                가죽의류
               </a>
             </li>
             <li>
               <a href="#">
-                팬츠/버뮤다 
+                팬츠/버뮤다
               </a>
             </li>
             <li>
@@ -101,7 +101,7 @@
                 조깅복/스웨트 셔츠
               </a>
             </li>
-          </ul> 
+          </ul>
         </div>
         <section class="container section-g section-shopping">
           <div class="inner">
@@ -116,6 +116,73 @@
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">캐시미어 디자인</strong>
+                      <p class="txt-shopping-desc"></p>
+
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
+                </li>
+                <li class="img-bigsize">
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">제목</strong>
+                      <p class="txt-shopping-desc">상품설명</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
                       <strong class="txt-shopping-tit">제목</strong>
                       <p class="txt-shopping-desc">상품설명</p>
                     </div>
@@ -173,7 +240,7 @@
                     </div>
                   </a>
                 </li>
-                 <li>
+                <li>
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
@@ -186,7 +253,7 @@
                     </div>
                   </a>
                 </li>
-                 <li>
+                <li>
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
@@ -199,7 +266,7 @@
                     </div>
                   </a>
                 </li>
-                 <li>
+                <li>
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
@@ -212,72 +279,7 @@
                     </div>
                   </a>
                 </li>
-                 <li>
-                  <a href="#">
-                    <div class="thumb-shopping">
-                      <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
-                        alt="옷1">
-                    </div>
-                    <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
-                    </div>
-                  </a>
-                </li>
-                 <li class="img-bigsize">
-                  <a href="#">
-                    <div class="thumb-shopping">
-                      <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
-                        alt="옷1">
-                    </div>
-                    <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
-                    </div>
-                  </a>
-                </li>
-                 <li>
-                  <a href="#">
-                    <div class="thumb-shopping">
-                      <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
-                        alt="옷1">
-                    </div>
-                    <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
-                    </div>
-                  </a>
-                </li>
-                 <li>
-                  <a href="#">
-                    <div class="thumb-shopping">
-                      <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
-                        alt="옷1">
-                    </div>
-                    <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
-                    </div>
-                  </a>
-                </li>
-                 <li>
-                  <a href="#">
-                    <div class="thumb-shopping">
-                      <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
-                        alt="옷1">
-                    </div>
-                    <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
-                    </div>
-                  </a>
-                </li>
-                 <li>
+                <li>
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
@@ -329,7 +331,7 @@
                     </div>
                   </a>
                 </li>
-                 <li>
+                <li>
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
@@ -342,7 +344,7 @@
                     </div>
                   </a>
                 </li>
-                 <li>
+                <li>
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
